fix horizontal overflowing in experiences and contact sections

--- a/src/app/sections/contact/Contact.module.scss
+++ b/src/app/sections/contact/Contact.module.scss
@@ -52,7 +52,7 @@
 
     @media (max-width: 768px) {
         .content {
-            padding: 64px 16px;
+            padding: 64px 0px;
         }
     }
 }
