--- a/src/app/sections/experiences/Experiences.module.scss
+++ b/src/app/sections/experiences/Experiences.module.scss
@@ -36,7 +36,7 @@
 
     @media (max-width: 768px) {
         .content {
-            padding: 64px 16px;
+            padding: 64px 0px;
         }
     }
 
